# crm_app

./: .coverage  .dockerignore  .env  .gitignore  Dockerfile  README.md  database.py  docker-compose.yaml  main.py  pyproject.toml  repository.py  router.py  schemas.py  task.db
.direnv/python-3.10/: pyvenv.cfg
.direnv/python-3.12/: pyvenv.cfg
src/: .gitignore  config.py  core.py  database.py  main.py
src/crm_app/: config.py  core.py  database.py  main.py
src/crm_app/migrations/: env.py
src/crm_app/migrations/versions/: 5205a6589cf2_database_creation02.py  c0729150fb76_database_creation.py  e12520765b38_adding_notifications.py
src/crm_app/models/: models.py
src/migrations/: env.py
src/migrations/versions/: 2d2a84394e78_database_creation.py
src/models/: models.py
src/routers/: router.py
tests/: .coverage  test_add_note.py  test_client.py  test_get_all_note.py  test_get_client.py  test_get_clients.py  test_get_note.py  test_main.py
