[tool.poetry]
name = "crm-app"
version = "0.1.0"
description = "CRM for Real Estate"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "crm_app"}]

[tool.poetry.dependencies]
python = "3.12.4"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
aiosqlite = "^0.20.0"
pydantic = "^2.8.0"
fastapi = "^0.111.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
