[tool.poetry]
name = "crm-app"
version = "0.1.0"
description = "CRM for Real Estate"
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.12.4"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
aiosqlite = "^0.20.0"
pydantic = "^2.8.0"
fastapi = "^0.111.0"
pytest = "^8.2.2"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.4.0"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
