[tool.poetry]
name = "crm-app"
version = "0.1.0"
description = "CRM for Real Estate"
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.12.4"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
aiosqlite = "^0.20.0"
pydantic = "^2.8.0"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
httpx = "^0.27.2"
aiogram = "^3.16.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.0"
pytest-mock = "^3.14.0"
mypy = "^1.13.0"
ruff = "^0.8.3"


[tool.poetry.group.local.dependencies]
pydantic-settings = "^2.7.0"
alembic = "^1.14.0"
asyncpg = "^0.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
